Clean-up core code (#3597)